<resources>
    <string name="app_name">Math Trainer</string>
    <string name="go">Go</string>
    <string name="_30s">30S</string>
    <string name="_0_0">0/0</string>
    <string name="_3_x_3">3 x 3</string>
    <string name="_3">3</string>
    <string name="correct">Correct!</string>
    <string name="play_again">Play Again!</string>
    <string name="time_s_up_n_play_again">Time\'s up!  play_again</string>
    <string name="Play_again">Play Again</string>
</resources>
