<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jimmy.mathtrainer.MainActivity">

    <RelativeLayout
        android:id="@+id/gameRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <GridLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/productTextView">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="@android:color/holo_blue_bright"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="@string/_3"
                android:textSize="80sp" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:background="@color/colorAccent"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="@string/_3"
                android:textSize="80sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:background="@android:color/holo_green_light"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="@string/_3"
                android:textSize="80sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:background="@android:color/holo_purple"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="@string/_3"
                android:textSize="80sp" />
        </GridLayout>

        <TextView
            android:id="@+id/productTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/timerTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:padding="10dp"
            android:text="@string/_3_x_3"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="14dp"
            android:padding="10dp"
            android:text="@string/_30s"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/playAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="65dp"
            android:background="@color/colorPrimary"
            android:onClick="playAgain"
            android:text="@string/Play_again"
            android:textSize="30sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/pointsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/timerTextView"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:text="@string/_0_0"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:text="@string/correct"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:onClick="start"
        android:padding="40dp"
        android:text="@string/go"
        android:textSize="80sp"
        android:visibility="visible" />

</android.widget.RelativeLayout>